# pico-freertos-modbus-io

./: CMakeLists.txt  README.md
Modbus/Inc/: Modbus.h  ModbusConfig.h
Modbus/Src/: Modbus.c  UARTCallback.c
include/: FreeRTOSConfig.h
src/: main.cpp
